examples/type_system/failing/142_match_bool_missing_true.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/142_match_bool_missing_true.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/142_match_bool_missing_true.flx:27:14
//    |
// 27 |     let _x = match b {
//    |              ^^^^^^^^^
// 28 |         false -> 0
//    | ^^^^^^^^^^^^^^^^^^
// 29 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E015: Bool match missing true branch.
fn main() -> Unit {
    let b = false
    let _x = match b {
        false -> 0
    }
}
